--- a/composer.json
+++ b/composer.json
@@ -10,9 +10,10 @@
     ],
     "require": {
         "php": ">=7.2.5",
-        "symfony/console": "5.4.*",
-        "symfony/orm-pack": "^2.2",
-        "symfony/filesystem": "5.4.*"
+        "symfony/console": "@stable",
+        "symfony/filesystem": "^5.0.0",
+        "illuminate/database": "^7.0",
+        "illuminate/events": "^7.0"
     },
     "autoload": {
         "psr-4": {
