--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "illuminate/database": "^7.0",
         "illuminate/events": "^7.0"
     },
+    "bin": ["bin/fastadmin-bin"],
     "autoload": {
         "psr-4": {
             "Liujinyong\\FastadminBin\\": "src"
